# industrial-ai-agents

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
agents/idoca/: README.md  config.py  interface.py  utils.py
agents/itisa/: Dockerfile  README.md
agents/itisa/data/: events.xlsx
agents/itisa/notebooks/: data_pipeline.ipynb
agents/itisa/results/: tags_data_iforest_anomalies.json  tags_data_zscore_analysis.txt  tags_data_zscore_anomalies.json
agents/itisa/src/: dataloader.py  utils.py
agents/itisa/tools/: __init__.py  analysis_tool.py  data_processing_tool.py  data_tools.py  plotting_tool.py
agents/tsagent/: app.py  config.yaml  requirements.txt
agents/tsagent/results/: tags_data_exploration.txt
agents/tsagent/tools/: feature_anomaly_tools.py  visualization_tools.py
docs/: architecture.md  getting_started.md  index.md  troubleshooting.md
docs/examples/: index.md
docs/idoca/: index.md  vector_databases.md
docs/itisa/: index.md
generators/: industrial_dataset_generator.py
idoca/: README.md  __init__.py  agent.py  config.py  data_processor.py  docling_utils.py  interface.py  main.py  rag.py  requirements.txt
itisa/: README.md  app.py  requirements.txt  streaming_utils.py
