[project]
name = "industrial-ai-agents"
version = "0.1.0"
description = "Industrial AI Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=4.2.0",
    "oianalytics>=0.6.7",
    "openpyxl>=3.1.5",
    "pip-system-certs>=4.0",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "smolagents",
    "tagreader>=6.0.2"
]